# fast_akaze

./: LICENSE  README-linux.md  README.md  fast_akaze.sln
fast_akaze/: CMakeLists.txt  barter.hpp  fast_akaze.vcxproj  fast_akaze.vcxproj.filters  fps_stats.hpp  main.cpp  opencv300.props  opencv300_x64debug.props  opencv300_x64release.props  prebuilt_fast_akaze.vcxproj  prebuilt_opencv300.props  prebuilt_opencv300_x64debug.props  prebuilt_opencv300_x64release.props
fast_akaze/akaze/: AKAZEConfig.h  AKAZEFeatures.cpp  AKAZEFeatures.h  CMakeLists.txt  TEvolution.h  akaze.cpp  fed.cpp  nldiffusion_functions.cpp  nldiffusion_functions.h  utils.h
perf_tests/: Perf Test Guideline.txt  Perf Test Result Summary.xlsx  Profiler Results - R11.txt  Profiler Results - R9.5.txt  R0 - OpenCV3 included AKAZE.txt  R1 - AKAZE2 with the default setting.txt  R10 - Vary the number of threads.txt  R11 - Combine sepFilter2D and scaling.txt  R2 - AKAZE2 with VS2013 compiler option tweaking.txt  R3 - Make AKAZEFeature persistent.txt  R4 - Change Mat zeros to Mat create.txt  R5 - Remove temporary variables on heap.txt  R6 - Optimize the memory copies.txt  R7 - Make heavy loops more auto-vectorizer friendly.txt  R8.1 - Refactor compute_k_percentile.txt  R8.2 - Refactor nld_step_scalar.txt  R8.3 - Refactor Find_Scale_Space_Extrema.txt  R8.4 - Refactor Do_Subpixel_Refinement.txt  R8.5 - Refactor Compute_Main_Orientation.txt  R8.6 - Refactor Get_MLDB_Descriptor_Subset.txt  R8.7 - Refactor Compute_Determinant_Hessian_Response.txt  R8.8 - Refactor compute_k_percentile (revisited).txt  R9.1 - Remove OpenMP spin wait.txt  R9.2 - Parallelize Compute_Determinant_Hessian_Response.txt  R9.3 - Parallelize Create_Nonlinear_Scale_Space.txt  R9.4 - Tune the stride size of Compute_Descriptors.txt  R9.5 - Parallelize Find_Scale_Space_Extrema.txt  Rx - template.txt
